going to use scrapy

--- a/Data_Scrape.ipynb
+++ b/Data_Scrape.ipynb
@@ -2,15 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Goal: Scrape all the csv files and README files from the data source:\n",
     "# http://www.equality-of-opportunity.org/data/\n",
-    "# Place them in the directory data/ (ideally will make more subfolders later)"
+    "# Place them in the directory data/ (ideally will make more subfolders later)\n"
    ]
   },
   {
