cleaned URLs but download is resulting in HTTP errors

--- a/Data_Scrape.ipynb
+++ b/Data_Scrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,8 @@
    "source": [
     "# Goal: Scrape all the csv files and README files from the data source:\n",
     "# http://www.equality-of-opportunity.org/data/\n",
-    "# Place them in the directory data/ (ideally will make more subfolders later)\n"
+    "# Place them in the directory data/ (ideally will make more subfolders later)\n",
+    "2+3"
    ]
   },
   {
